--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
-    <title>CRUD Operations</title>
+    <title>Oscar Javier Villegas Cornelio 212H17053</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
